// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`module > analyzeModule() > ModuleDeprecationTest 1`] = `
{
  "comment": "This is a description for a module with a code example.",
  "deprecated": "Well, this is deprecated.",
  "examples": undefined,
}
`;

exports[`module > analyzeModule() > ModuleExampleTest 1`] = `
{
  "comment": "This is a description for a module with a code example.",
  "deprecated": undefined,
  "examples": "<div class="language-ts vp-adaptive-theme"><button title="Copy Code" class="copy"></button><span class="lang">ts</span><pre class="shiki shiki-themes github-light github-dark vp-code" v-pre><code><span class="line"><span style="--shiki-light:#D73A49;--shiki-dark:#F97583">new</span><span style="--shiki-light:#6F42C1;--shiki-dark:#B392F0"> ModuleExampleTest</span><span style="--shiki-light:#24292E;--shiki-dark:#E1E4E8">()</span></span></code></pre>
</div>",
}
`;

exports[`module > analyzeModule() > ModuleFakerJsLinkTest 1`] = `
{
  "comment": "Description with a link to our [website](/)
and [api docs](/api/).",
  "deprecated": undefined,
  "examples": undefined,
}
`;

exports[`module > analyzeModule() > ModuleNextFakerJsLinkTest 1`] = `
{
  "comment": "Description with a link to our [website](/)
and [api docs](/api/).",
  "deprecated": undefined,
  "examples": undefined,
}
`;

exports[`module > analyzeModule() > ModuleSimpleTest 1`] = `
{
  "comment": "A simple module without anything special.",
  "deprecated": undefined,
  "examples": undefined,
}
`;

exports[`module > analyzeModule() > expected and actual modules are equal 1`] = `
[
  "ModuleDeprecationTest",
  "ModuleExampleTest",
  "ModuleFakerJsLinkTest",
  "ModuleNextFakerJsLinkTest",
  "ModuleSimpleTest",
]
`;
